# AllegroTestProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README  cmake_install.cmake
src/: test.cpp
